Moved inputs to env file

--- a/env.py.template
+++ b/env.py.template
@@ -1,5 +1,15 @@
 # Copy the .env.py.template and rename it to .env.py
 # Enter your email and password you use to log into LiquidPlanner classic.
-
 LIQUID_PLANNER_EMAIL = ''
 LIQUID_PLANNER_PASSWORD = ''
+
+# Software Team User IDs (in LP)
+USER_IDS = [
+    0000000,  # User 1
+    0000000   # User 2
+]
+
+# Current Sprint Details
+SPRINT_NUMBER = 0
+SPRINT_PACKAGE_ID = 00000000
+SPRINT_START_TIME = "YYYY-MM-DDTHH:mm:ss+00:00"  # (UTC) Should be the time 2 minutes before the sprint baseline was taken
